tests/bad/var_not_found.ae
/// fail: Unknown Identifier

def main() {
    return x
}